--- a/next/package.json
+++ b/next/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "@directus/sdk": "^14.0.0",
+    "@nextui-org/react": "^2.2.9",
+    "clsx": "^2.1.0",
+    "framer-motion": "^10.18.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
