--- a/next/package.json
+++ b/next/package.json
@@ -1,5 +1,6 @@
 {
   "name": "agency-os-client",
+  "proxy": "http://localhost:8055",
   "author": "slaint",
   "version": "0.1.0",
   "private": true,
@@ -16,7 +17,8 @@
     "framer-motion": "^10.18.0",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
